[package]
name = "a2a-framework"
version = "0.1.0"
edition = "2021"
description = "A Rust framework for building Agent-to-Agent (A2A) protocol services"
license = "MIT"
authors = ["Marek Kucak marek.kucak@proton.me"]

[dependencies]
anyhow = "1.0"
async-nats = "0.33"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.32", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.4", features = ["v4", "serde"] }

[dev-dependencies]
env_logger = "0.10"
tokio-test = "0.4"
